<resources>

    <string name="noEmulatorServerURL">https://10.0.0.6:8080</string>
    <string name="serverURL">https://10.0.2.2:8080</string>

    <string name="app_name">LocMess</string>

    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="signup">Signup</string>
    <string name="submit">Submit</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="remove">Remove</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="passwordAgain">Retype Password</string>

    <string name="badPasswordMatch">Passwords do not match!</string>
    <string name="sessionFailed">You need to login again.</string>

    <string name="home">Home</string>

    <string name="drawer_open">Open options</string>
    <string name="drawer_close">Close options</string>


    <string name="location">Location</string>
    <string name="manageLocations">Manage locations</string>
    <string name="locations">Locations</string>

    <string name="addLocation">Add Location</string>
    <string name="addGPSLocation">Add GPS Location</string>
    <string name="addWiFiLocation">Add WiFi Location</string>
    <string name="addCurrentLocation">Add Current Location</string>
    <string name="deleteLocation">Delete Location</string>

    <string name="ssid">Network SSIDs</string>
    <string name="separatorNotice">(Separate with \'\\n\')</string>
    <string name="locationName">Location name</string>
    <string name="locationType">Location type</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="radius">Radius</string>
    <string name="useCurrentLocation">Use current location</string>

    <string name="profile">Profile</string>
    <string name="viewProfile">View Profile</string>
    <string name="interest">Interest</string>
    <string name="manageInterests">Manage Interests</string>
    <string name="addInterest">Add Interest</string>
    <string name="updateInterest">Update Interest</string>
    <string name="deleteInterest">Delete Interest</string>

    <string name="messages">Messages</string>
    <string name="myMessages">My Messages</string>
    <string name="postMessage">Post New Message</string>
    <string name="saveMessage">Save Message</string>
    <string name="savedMessages">Saved Messages</string>
    <string name="deleteMessage">Delete Message</string>
    <string name="manageMessages">Manage your posted messages</string>
    <string name="post">Post</string>
    <string name="title">Title</string>
    <string name="text">Text</string>
    <string name="chooseLocation">Choose Location</string>

    <string name="poster">Poster</string>
    <string name="publishDate">Posted on (mm/dd/yyyy)</string>
    <string name="message">Message</string>


    <string name="setStartDateTime">Set start date/time</string>
    <string name="setEndDateTime">Set end date/time</string>
    <string name="startDateTime">Start date/time</string>
    <string name="endDateTime">End date/time</string>
    <string name="setStartDate">Set start date</string>
    <string name="setStartTime">Set start time</string>
    <string name="setEndDate">Set end date</string>
    <string name="setEndTime">Set end time</string>
    <string name="startDate">Start date</string>
    <string name="startTime">Start time</string>
    <string name="endDate">End date</string>
    <string name="endTime">End time</string>

    <string name="whitelist">Whitelist</string>
    <string name="blacklist">Blacklist</string>

    <string name="rule">Message Rule</string>
    <string name="addRule">Add Rule</string>
    <string name="updateRule">Update Rule</string>
    <string name="deleteRule">Delete Rule</string>


    <string name="deliveryMode">Delivery Mode</string>
    <string name="centralized">Centralized (via server)</string>
    <string name="decentralized">Decentralized (via WiFiDirect)</string>


    <string name="settings">Settings</string>
    <string name="appConfig">App Configuration</string>
    <string name="key">Key</string>
    <string name="value">Value</string>

</resources>
