<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewMessageBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/savedMessages" />

    <TextView
        android:id="@+id/textViewLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="location" />

    <TextView
        android:id="@+id/textViewStartDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/startDate" />

    <TextView
        android:id="@+id/textViewEndDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/endDate" />
</LinearLayout>